--- a/scss/blocks/_main-commitment.scss
+++ b/scss/blocks/_main-commitment.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     margin-top: 160px;
+    margin-bottom: 200px;
 }
 .main__our-list{
     width: 500px;
