--- a/css/main.css
+++ b/css/main.css
@@ -585,7 +585,23 @@ body {
   }
 }
 
-@media only screen and (max-width: 324px) {
+@media only screen and (max-width: 375px) {
+  .our__item {
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 28px;
+  }
+  .our__text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 26px;
+  }
+  .lost {
+    padding-top: 100px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
   .our__item {
     font-weight: 900;
     font-size: 28px;
@@ -660,6 +676,7 @@ body {
     width: 540px;
     -o-object-fit: cover;
        object-fit: cover;
+    background-position: bottom 600px;
     height: 290px;
     right: 90px;
     top: -100px;
@@ -689,7 +706,34 @@ body {
   }
 }
 
-@media only screen and (max-width: 324px) {
+@media only screen and (max-width: 375px) {
+  .quality {
+    margin-left: 10px;
+    width: 400px;
+    margin-top: 190px;
+  }
+  .main__quality-img {
+    top: -70px;
+    width: 250px;
+    height: 150px;
+    right: 35px;
+  }
+  .quality__item {
+    font-weight: 900;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .quality__text {
+    margin-bottom: 130px;
+    margin-left: 1px;
+    margin-right: 5px;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 26px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
   .quality {
     margin-left: 10px;
     width: 360px;
@@ -703,15 +747,15 @@ body {
   }
   .quality__item {
     font-weight: 900;
-    font-size: 28px;
-    line-height: 28px;
+    font-size: 15px;
+    line-height: 25px;
   }
   .quality__text {
     margin-bottom: 130px;
     margin-left: 1px;
     margin-right: 5px;
     font-weight: 400;
-    font-size: 12px;
+    font-size: 10px;
     line-height: 26px;
   }
 }
@@ -720,7 +764,7 @@ body {
   color: #83888F;
 }
 
-.main__footer--list {
+.main__footer-tip {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -733,16 +777,16 @@ body {
           justify-content: space-between;
 }
 
-.main__footer--title {
+.main__footer-title {
   width: 290px;
-}
-
-.main__footer--title:nth-child(2) {
-  margin-left: 100px;
   margin-right: 100px;
 }
 
-.main__text--h3 {
+.main__footer-title:nth-child(2) {
+  margin-right: 0;
+}
+
+.main__text-h3 {
   font-size: 32px;
   line-height: 36px;
 }
@@ -753,6 +797,41 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 26px;
+}
+
+@media only screen and (max-width: 425px) {
+  .main__footer-tip {
+    display: block;
+    text-align: center;
+  }
+  .main__our {
+    text-align: center;
+  }
+  .header__footer-ing {
+    margin-top: 88px;
+  }
+  .main__text-h3 {
+    font-weight: 900;
+    font-size: 28px;
+    line-height: 36px;
+  }
+  .main__address {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 26px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .main__footer-tip {
+    margin-left: -20px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .main__footer-tip {
+    margin-left: -40px;
+  }
 }
 
 .footer {
@@ -766,6 +845,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer__ol {
@@ -788,6 +870,9 @@ body {
 
 .footer__title {
   color: #83888F;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
   text-decoration: none;
   margin-left: 35px;
 }
@@ -798,5 +883,81 @@ body {
 
 .footer__logo {
   margin-left: 35px;
+}
+
+@media only screen and (max-width: 1024px) {
+  .footer__2 {
+    margin-left: 100px;
+  }
+  .footer__ol {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-left: 20px;
+  }
+  .footer__title {
+    font-size: 15px;
+    font-weight: bold;
+    font-size: 10px;
+    line-height: 15px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .footer__list {
+    display: block;
+    text-align: center;
+  }
+  .footer__ol {
+    margin-left: 110px;
+  }
+  .footer__title {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+  }
+  .footer__2 {
+    margin-left: 175px;
+    margin-top: 60px;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .footer__ol {
+    display: block;
+    margin-left: -60px;
+  }
+  .footer__text {
+    padding: 14px;
+  }
+  .footer__2 {
+    margin-left: 10px;
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .footer__ol {
+    margin-left: -55px;
+  }
+  .footer__2 {
+    margin-left: -10px;
+    margin-top: 40px;
+  }
+}
+
+@media only screen and (max-width: 320px) {
+  .footer__ikon {
+    margin-left: -20px;
+  }
+  .footer__ol {
+    margin-left: -75px;
+  }
+  .footer__2 {
+    margin-left: -45px;
+    margin-top: 40px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
