--- a/scss/blocks/_main-commitment.scss
+++ b/scss/blocks/_main-commitment.scss
@@ -51,7 +51,24 @@
         margin-top: -50px;
     }
 }
-@media only screen and ( max-width:324px ){
+@media only screen and ( max-width:375px ){
+    
+    .our__item{
+        font-weight: 900;
+        font-size: 28px;
+        line-height: 28px;
+    }
+    .our__text{
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 26px;
+    }
+    .lost{
+        padding-top: 100px;
+    }
+}
+
+@media only screen and ( max-width:320px ){
     
     .our__item{
         font-weight: 900;
