--- a/scss/blocks/_main-quality.scss
+++ b/scss/blocks/_main-quality.scss
@@ -48,6 +48,7 @@
     .main__quality-img{
         width: 540px;
         object-fit: cover;
+        background-position: bottom 600px;
         height: 290px;
         right: 90px;
         top: -100px;
@@ -75,7 +76,34 @@
         margin-left: 50px;
     }
 }
-@media only screen and (max-width:324px){
+@media only screen and (max-width:375px){
+    .quality{
+        margin-left: 10px;
+        width: 400px;
+        margin-top: 190px;
+     }
+     .main__quality-img{
+         top: -70px;
+         width: 250px;
+         height: 150px;
+         right: 35px;
+     }
+     .quality__item{
+        font-weight: 900;
+        font-size: 20px;
+        line-height: 25px;
+    }
+     .quality__text{
+         margin-bottom: 130px;
+         margin-left: 1px;
+         margin-right: 5px;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 26px;
+     }
+}
+
+@media only screen and (max-width:320px){
     .quality{
         margin-left: 10px;
         width: 360px;
@@ -89,15 +117,15 @@
      }
      .quality__item{
         font-weight: 900;
-        font-size: 28px;
-        line-height: 28px;
+        font-size: 15px;
+        line-height: 25px;
     }
      .quality__text{
          margin-bottom: 130px;
          margin-left: 1px;
          margin-right: 5px;
         font-weight: 400;
-        font-size: 12px;
+        font-size: 10px;
         line-height: 26px;
      }
 }
